# aoc.rs

./: .gitignore  .nvim.lua  Cargo.toml  README.md  fetch  gen
2015/: Cargo.toml  bacon.toml
2015/day09/: Cargo.toml
2015/day09/src/: lib.rs  parsing.rs  part1.rs  part2.rs
2016/day10/: Cargo.toml
2016/day10/src/: lib.rs  parsing.rs  part1.rs  part2.rs
2016/day24/: Cargo.toml
2016/day24/src/: adj.rs  lib.rs  parsing.rs  part1.rs  part2.rs  walk.rs  walk2.rs
2017/day14/: Cargo.toml
2017/day14/src/: lib.rs  part1.rs  part2.rs
2019/day18/: Cargo.toml
2019/day18/src/: lib.rs  part1.rs  part2.rs
2022/: Cargo.toml
2022/day01/: Cargo.toml
2022/day01/src/: parsing.rs  part1.rs  part2.rs
2022/day02/: Cargo.toml
2022/day02/src/: parsing.rs  part1.rs  part2.rs
2022/day03/src/: part1.rs  part2.rs
2022/day04/: Cargo.toml
2022/day04/src/: parsing.rs  part1.rs  part2.rs
2022/day05/: Cargo.toml
2022/day05/src/: parsing.rs  part1.rs  part2.rs
2022/day06/: Cargo.toml
2022/day06/src/: part1.rs  part2.rs
2022/day07/: Cargo.toml
2022/day07/src/: lib.rs  parsing.rs  part1.rs  part2.rs
2022/day08/: Cargo.toml
2022/day08/src/: part1.rs  part2.rs
2022/day09/: Cargo.toml
2022/day09/src/: lib.rs  parsing.rs  part1.rs  part2.rs
2022/day10/src/: parsing.rs  part1.rs  part2.rs
2022/day11/src/: lib.rs  parsing.rs  part1.rs  part2.rs
2022/day12/: Cargo.toml
2022/day12/src/: parsing.rs  part1.rs  part2.rs
2022/day13/src/: lib.rs  parsing.rs  part1.rs  part2.rs
2022/day14/src/: parsing.rs  part1.rs  part2.rs
2022/day15/: Cargo.toml
2022/day15/src/: lib.rs  parsing.rs  part1.rs  part2.rs
2022/day16/src/: parsing.rs  part1.rs  part2.rs
2022/day17/: Cargo.toml
2022/day17/src/: lib.rs  part1.rs  part2.rs
2022/day18/: Cargo.toml
2022/day18/src/: lib.rs  parsing.rs  part1.rs  part2.rs
2022/day19/src/: lib.rs  parsing.rs  part1.rs  part2.rs
2022/day20/: Cargo.toml
2022/day20/src/: lib.rs  parsing.rs  part1.rs  part2.rs
2022/day21/: Cargo.toml
2022/day21/src/: parsing.rs  part1.rs  part2.rs
2022/day22/: Cargo.toml
2022/day22/src/: lib.rs  parsing.rs  part1.rs  part2.rs
2022/day23/: Cargo.toml
2022/day23/src/: parsing.rs  part1.rs  part2.rs
2022/day24/: Cargo.toml
2022/day24/src/: lib.rs  parsing.rs  part1.rs  part2.rs
2022/day25/: Cargo.toml
2022/day25/src/: part1.rs
2023/: Cargo.toml
2023/day01/src/: main.rs  part1.rs  part2.rs
2023/day02/: Cargo.toml
2023/day02/src/: main.rs  part1.rs  part2.rs
2023/day03/: Cargo.toml
2023/day03/src/: lib.rs  main.rs  part1.rs  part2.rs
2023/day04/: Cargo.toml
2023/day04/src/: part1.rs  part2.rs
2023/day05/: Cargo.toml
2023/day05/src/: part1.rs  part2.rs
2023/day06/: Cargo.toml
2023/day06/src/: part1.rs  part2.rs
2023/day07/: Cargo.toml
2023/day07/src/: lib.rs  part1.rs  part2.rs
2023/day08/src/: lib.rs  part1.rs  part2.rs
2023/day09/: Cargo.toml
2023/day09/src/: lib.rs  part1.rs  part2.rs
2023/day10/: Cargo.toml
2023/day10/src/: lib.rs  part1.rs  part2.rs
2023/day11/: Cargo.toml
2023/day11/src/: lib.rs  part1.rs  part2.rs
2023/day12/: Cargo.toml
2023/day12/src/: lib.rs  p2.py  part1.rs  part2.rs
2023/day13/src/: part1.rs  part2.rs
2023/day14/src/: part1.rs  part2.rs
2023/day15/: Cargo.toml
2023/day15/src/: part1.rs  part2.rs
2023/day16/: Cargo.toml
2023/day16/src/: lib.rs  part1.rs  part2.rs
2023/day17/: Cargo.toml
2023/day17/src/: lib.rs  part1.rs  part2.rs
2023/day18/: Cargo.toml
2023/day18/src/: part1.rs  part2.rs
2023/day19/: Cargo.toml
2023/day19/src/: lib.rs  main.rs  part1.rs  part2.rs
2023/day20/: Cargo.toml
2023/day20/src/: dot.txt  lib.rs  p2.py  part1.rs  part2.rs
2023/day21/: Cargo.toml
2023/day21/src/: p2.py  part1.rs  part2.rs
2023/day22/src/: lib.rs  part1.rs  part2.rs
2023/day23/: Cargo.toml
2023/day23/src/: lib.rs  part1.rs  part2.rs
2023/day24/: Cargo.toml
2023/day24/src/: part1.rs  part2.rs
2023/day25/src/: part1.rs
2024/: Cargo.toml
2024/day01/src/: part1.rs  part2.rs
2024/day02/src/: part1.rs  part2.rs
2024/day03/: Cargo.toml
2024/day03/src/: part1.rs  part2.rs
2024/day04/: Cargo.toml
2024/day04/src/: lib.rs  part1.rs  part2.rs
2024/day05/: Cargo.toml
2024/day05/src/: lib.rs  part1.rs  part2.rs
2024/day06/: Cargo.toml
2024/day06/src/: lib.rs  part1.rs  part2.rs
2024/day07/: Cargo.toml
2024/day07/src/: part1.rs  part2.rs
2024/day08/: Cargo.toml
2024/day08/src/: lib.rs  part1.rs  part2.rs
2024/day09/src/: lib.rs  part1.rs  part2.rs
2024/day10/: Cargo.toml
2024/day10/src/: lib.rs  part1.rs  part2.rs
2024/day11/: Cargo.toml
2024/day11/src/: part1.rs  part2.rs
2024/day12/: Cargo.toml
2024/day12/src/: lib.rs  part1.rs  part2.rs  part2_corners.rs
2024/day13/: Cargo.toml
2024/day13/src/: lib.rs  part1.rs  part2.rs
2024/day14/: Cargo.toml
2024/day14/src/: lib.rs  part1.rs  part2.rs
2024/day15/: Cargo.toml
2024/day15/src/: lib.rs  part1.rs  part2.rs
2024/day16/: Cargo.toml
2024/day16/src/: lib.rs  part1.rs  part2.rs
2024/day17/: Cargo.toml
2024/day17/src/: lib.rs  part1.rs  part2.rs
2024/day18/: Cargo.toml
2024/day18/src/: part1.rs  part2.rs
2024/day19/src/: part1.rs  part2.rs
2024/day20/: Cargo.toml
2024/day20/src/: lib.rs  part1.rs  part2.rs
2024/day21/: Cargo.toml
2024/day21/src/: enums.rs  lib.rs  part1.rs  part2.rs
2024/day21/src/enums/: actions.rs  directionals.rs  directionnals.rs  numerics.rs
2024/day22/: Cargo.toml
2024/day22/src/: lib.rs  part1.rs  part2.rs
2024/day23/src/: part1.rs  part2.rs
2024/day24/: Cargo.toml
2024/day24/src/: lib.rs  part1.rs  part2.rs
2024/day25/src/: part1.rs  part2.rs
year_template/: Cargo.toml
year_template/aoc_helper/: Cargo.toml
year_template/aoc_helper/src/: assembly.rs  direction.rs  grid.rs  lib.rs  nom.rs
year_template/day01/: Cargo.toml
year_template/day01/src/: main.rs
year_template/last_day/{{project-name}}/src/: parsing.rs
year_template/{{project-name}}/: Cargo.toml
year_template/{{project-name}}/src/: parsing.rs  part1.rs  part2.rs
(+742 files in other folders)
