[workspace]
members = ['day*']
resolver = "2"

[workspace.package]
version = '0.1.0'
edition = '2021'
authors = ["Vương Kiến Thanh <thanhstardust@outlook.com>"]
rust-version = "1.70.0"
description = "solver for adventofcode.com"
publish = false

[workspace.dependencies]
itertools = "0.13"
nom = "7.1.3"
rstest = "0.23.0"
grid = "0.15.0"
