[workspace]
members = ['day*']
resolver = "2"

[workspace.package]
version = '0.1.0'
edition = '2024'
authors = ["Vương Kiến Thanh <thanhstardust@outlook.com>"]
rust-version = "1.91.0"
description = "solver for adventofcode.com"
publish = false

[workspace.dependencies]
itertools = "0.14"
nom = "8.0.0"
rstest = "0.26.1"
glam = "0.30.9"
