[workspace]
members = ['day*']
resolver = "3"

[workspace.package]
version = '0.1.0'
edition = '2024'
authors = ["Vương Kiến Thanh <thanhstardust@outlook.com>"]
rust-version = "1.91.0"
description = "solver for adventofcode.com"
publish = false

[workspace.dependencies]
itertools = "~0.14"
fraction = "0.15.3"
nom = "~8.0.0"
glam = "~0.30.9"
grid = "~1.0.0"
tinyvec = "~1.10.0"
micromap = "~0.1.0"
md5 = "~0.8.0"
aoc_helper = { path = "../aoc_helper" }
rstest = "~0.26.1"
rayon = "1.11.0"
fxhash = "0.2.1"
