[package]
name = "day09"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
itertools.workspace = true
nom.workspace = true
fxhash.workspace = true
[dev-dependencies]
rstest.workspace = true
