[package]
name = "day10"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
rstest.workspace = true
nom.workspace = true
fxhash.workspace = true
aoc_helper.workspace = true
tinyvec.workspace = true
