[package]
name = "day24"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
rstest.workspace = true
grid.workspace = true
itertools.workspace = true
aoc_helper.workspace = true
