[package]
name = "day14"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
nom.workspace = true
day10 = { path = "../day10" }
aoc_helper.workspace = true

[dev-dependencies]
rstest.workspace = true
