[package]
name = "day18"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
nom.workspace = true
aoc_helper.workspace = true
fxhash.workspace = true

[dev-dependencies]
rstest.workspace = true
